@@ -1388,13 +1388,8 @@ BidiIterator RenderBlock::findNextLineBreak(BidiIterator &start)
             // add to special objects...
             if (o->isFloating()) {
                 insertFloatingObject(o);
-                // check if it fits in the current line.
-                // If it does, position it now, otherwise, position
-                // it after moving to next line (in newLine() func)
-                if (o->width()+o->marginLeft()+o->marginRight()+w+tmpW <= width) {
-                    positionNewFloats();
-                    width = lineWidth(m_height);
-                }
+                positionNewFloats();
+                width = lineWidth(m_height);
             }
             else if (o->isPositioned()) {
                 if (o->hasStaticX())
