@@ -1460,7 +1460,8 @@ unsigned short
 RenderBlock::lineWidth(int y) const
 {
     //kdDebug( 6040 ) << "lineWidth(" << y << ")=" << rightOffset(y) - leftOffset(y) << endl;
-    return rightOffset(y) - leftOffset(y);
+    int result = rightOffset(y) - leftOffset(y);
+    return (result < 0) ? 0 : result;
 }
 
 int
